merge release verifier 0.9.0.0